# run_app_container

./: Cargo.toml  README.md  Start-IsolatedProcess.ps1
src/: app_container.rs  cli.rs  helper.rs  job.rs  lib.rs  logger.rs  main.rs  permission.rs  process.rs  wide_string.rs
