[package]
name = "run_app_container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2"
log = "0.4"
rand = "0.8"
regex = "1"

[dependencies.windows]
version = "0.42"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Isolation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
]
